--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 
                
             </div>
-            <p href="" class="btn">Submit</p>
+            <p class="btn">Submit</p>
         </div>
     </div>
 
